feat: add documentation endpoint for page mane controller
